--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "svelte-date-component",
-	"version": "1.1.0",
+	"version": "1.2.0",
 	"description": "A svelte component for displaying the amount of elapsed time since a given date.",
 	"main": "index.js",
 	"scripts": {
@@ -21,5 +21,9 @@
 	"bugs": {
 		"url": "https://github.com/Vehmloewff/svelte-date-component/issues"
 	},
-	"homepage": "https://github.com/Vehmloewff/svelte-date-component#readme"
+	"homepage": "https://github.com/Vehmloewff/svelte-date-component#readme",
+	"dependencies": {
+		"user-friendly-date": "^1.1.1",
+		"user-friendly-date-formatter": "^2.0.0"
+	}
 }
